2005-03-31 Pierrick LE GALL <pierrick at phpwebgallery dot net>

	* apply category name and element name separation in calendar
	special category

	* change method of counting total number of viewable pictures :
	pictures linked to more than one category are not counted twice.
	
2005-03-26 Pierrick LE GALL <pierrick at phpwebgallery dot net>

	* "add to caddie" link is visible only when categories contains
	elements. Only admin users can see this link

	* elements batch management : impossible to create a link between
	category and element that already exists

	* logical separation of category name under thumbnail and element
	name

2005-03-25 Pierrick LE GALL <pierrick at phpwebgallery dot net>

	* application version is defined at build or release
	creation. This way, include/constants.php won't change at each
	build.

2005-03-25 Pierrick LE GALL <pierrick at phpwebgallery dot net>

	* typo fixed : wrong block name closed in template

2005-03-25 Pierrick LE GALL <pierrick at phpwebgallery dot net>
	
	* new feature : caddie. The purpose is batch management,
	especially concerning elements to categories associations.This is
	the very first release, needs many improvements.